# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer.yml  project-check.yml
page_analyzer/: app.py  services.py  utils.py
page_analyzer/templates/: base.html  home.html  index.html  show_url.html  url_analyze.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
