[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vol'nov Kirill <volnov-93@mail.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
